name:                sane-server
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Ian Duncan
-- maintainer:          
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


executable sane
  main-is:             Main.hs
  other-modules:
  default-extensions:  NoImplicitPrelude
  build-depends:
      base >=4.6 && <5,
      warp >=2.0.3.1 && <2.1,
      amqp,
      webmachine,
      sane,
      sane-routes,
      stripe,
      mwc-random,
      http-types,
      postgresql-simple,
      resource-pool,
      bytestring,
      metrics
  hs-source-dirs:      src
  default-language:    Haskell2010

